Modified so that a http url may be given on command-line