@@ -19,89 +19,74 @@
  */
 package org.xhtmlrenderer.swing;
 
-import java.awt.Color;
-import java.awt.Dimension;
-import java.awt.event.ActionEvent;
-import java.awt.event.KeyEvent;
-import java.awt.event.MouseAdapter;
-import java.awt.event.MouseEvent;
-import javax.swing.AbstractAction;
-import javax.swing.JCheckBoxMenuItem;
-import javax.swing.JFrame;
-import javax.swing.JMenu;
-import javax.swing.JMenuBar;
-import javax.swing.JScrollPane;
-import javax.swing.KeyStroke;
-import javax.swing.SwingUtilities;
-import javax.swing.event.MouseInputAdapter;
-import org.w3c.dom.Element;
-import java.util.Map;
-import org.w3c.dom.Node;
-import org.xhtmlrenderer.render.Box;
-import org.xhtmlrenderer.render.InlineBox;
-import org.xhtmlrenderer.simple.*;
-import org.xhtmlrenderer.extend.*;
-import org.xhtmlrenderer.layout.LayoutFactory;
-import org.xhtmlrenderer.layout.Layout;
-import org.xhtmlrenderer.layout.InlineLayout;
-import org.xhtmlrenderer.render.*;
+import org.xhtmlrenderer.simple.XHTMLPanel;
 import org.xhtmlrenderer.util.XRLog;
 import org.xhtmlrenderer.util.u;
-import java.io.*;
+
+import javax.swing.*;
+import java.awt.*;
+import java.awt.event.ActionEvent;
+import java.awt.event.KeyEvent;
+import java.io.File;
+import java.net.URL;
 
 
 /**
  * Description of the Class
  *
- * @author   empty
+ * @author empty
  */
 public class HTMLTest extends JFrame {
-    /** Description of the Field */
+    /**
+     * Description of the Field
+     */
     private final XHTMLPanel panel;
     /** Description of the Field */
     //public final static int text_width = 600;
-    /** Description of the Field */
+    /**
+     * Description of the Field
+     */
     private final static String BASE_TITLE = "Flying Saucer";
 
     /**
      * Constructor for the HTMLTest object
      *
-     * @param args           PARAM
-     * @exception Exception  Throws
+     * @param args PARAM
+     * @throws Exception Throws
      */
-    public HTMLTest( String[] args )
-        throws Exception {
-        super( BASE_TITLE );
+    public HTMLTest(String[] args)
+            throws Exception {
+        super(BASE_TITLE);
         panel = new XHTMLPanel();
         int width = 360;
         int height = 500;
-        panel.setPreferredSize( new Dimension( width, height ) );
-        JScrollPane scroll = new JScrollPane( panel );
-        scroll.setVerticalScrollBarPolicy( scroll.VERTICAL_SCROLLBAR_ALWAYS );
-        scroll.setHorizontalScrollBarPolicy( scroll.HORIZONTAL_SCROLLBAR_ALWAYS );
-        scroll.setPreferredSize( new Dimension( width, height ) );
-        panel.addMouseListener( new LinkListener( panel ) );
+        panel.setPreferredSize(new Dimension(width, height));
+        JScrollPane scroll = new JScrollPane(panel);
+        scroll.setVerticalScrollBarPolicy(scroll.VERTICAL_SCROLLBAR_ALWAYS);
+        scroll.setHorizontalScrollBarPolicy(scroll.HORIZONTAL_SCROLLBAR_ALWAYS);
+        scroll.setPreferredSize(new Dimension(width, height));
+        panel.addMouseListener(new LinkListener(panel));
         HoverListener hov = new HoverListener(panel);
         panel.addMouseListener(hov);
         panel.addMouseMotionListener(hov);
 
-        if ( args.length > 0 ) {
-            loadDocument( args[0] );
+        if (args.length > 0) {
+            loadDocument(args[0]);
         }
 
-        getContentPane().add( "Center", scroll );
+        getContentPane().add("Center", scroll);
 
         JMenuBar mb = new JMenuBar();
-        JMenu file = new JMenu( "File" );
-        mb.add( file );
-        file.setMnemonic( 'F' );
-        file.add( new QuitAction() );
+        JMenu file = new JMenu("File");
+        mb.add(file);
+        file.setMnemonic('F');
+        file.add(new QuitAction());
 
-        JMenu view = new JMenu( "View" );
-        mb.add( view );
-        view.setMnemonic( 'V' );
-        view.add( new RefreshPageAction() );
-        view.add( new ReloadPageAction() );
+        JMenu view = new JMenu("View");
+        mb.add(view);
+        view.setMnemonic('V');
+        view.add(new RefreshPageAction());
+        view.add(new ReloadPageAction());
 
         /*
         JMenu test = new JMenu( "Test" );
@@ -132,18 +117,18 @@ public class HTMLTest extends JFrame {
         addFileLoadAction( test, "XML", demoRootDir + "/xml.xml" );
         addFileLoadAction( test, "pseudo-element", "/home/tobe/Projekt/xhtmlrenderer/test.xhtml" );
         */
-        JMenu debug = new JMenu( "Debug" );
-        mb.add( debug );
-        debug.setMnemonic( 'D' );
+        JMenu debug = new JMenu("Debug");
+        mb.add(debug);
+        debug.setMnemonic('D');
 
-        JMenu debugShow = new JMenu( "Show" );
-        debug.add( debugShow );
-        debugShow.setMnemonic( 'S' );
+        JMenu debugShow = new JMenu("Show");
+        debug.add(debugShow);
+        debugShow.setMnemonic('S');
 
-        debugShow.add( new JCheckBoxMenuItem( new BoxOutlinesAction() ) );
-        debugShow.add( new JCheckBoxMenuItem( new LineBoxOutlinesAction() ) );
-        debugShow.add( new JCheckBoxMenuItem( new InlineBoxesAction() ) );
-        debugShow.add( new JCheckBoxMenuItem( new FontMetricsAction() ) );
+        debugShow.add(new JCheckBoxMenuItem(new BoxOutlinesAction()));
+        debugShow.add(new JCheckBoxMenuItem(new LineBoxOutlinesAction()));
+        debugShow.add(new JCheckBoxMenuItem(new InlineBoxesAction()));
+        debugShow.add(new JCheckBoxMenuItem(new FontMetricsAction()));
         
         /*
         JMenu anti = new JMenu("Anti Aliasing");
@@ -153,7 +138,7 @@ public class HTMLTest extends JFrame {
         anti.add( new JCheckBoxMenuItem( new AntiAliasedAction("Highest", TextRenderer.HIGH) ) );
         debug.add( anti );
         */
-        debug.add( new ShowDOMInspectorAction() );
+        debug.add(new ShowDOMInspectorAction());
 /*
         debug.add(
                     new AbstractAction( "Print Box Tree" ) {
@@ -162,63 +147,68 @@ public class HTMLTest extends JFrame {
                         }
                     } );
 */
-        setJMenuBar( mb );
+        setJMenuBar(mb);
     }
 
     /**
      * Adds a feature to the FileLoadAction attribute of the HTMLTest object
      *
-     * @param menu     The feature to be added to the FileLoadAction attribute
-     * @param display  The feature to be added to the FileLoadAction attribute
-     * @param file     The feature to be added to the FileLoadAction attribute
+     * @param menu    The feature to be added to the FileLoadAction attribute
+     * @param display The feature to be added to the FileLoadAction attribute
+     * @param file    The feature to be added to the FileLoadAction attribute
      */
-    public void addFileLoadAction( JMenu menu, String display, final String file ) {
-        menu.add(
-                    new AbstractAction( display ) {
-                        public void actionPerformed( ActionEvent evt ) {
-                            loadDocument( file );
-                        }
-                    } );
+    public void addFileLoadAction(JMenu menu, String display, final String file) {
+        menu.add(new AbstractAction(display) {
+            public void actionPerformed(ActionEvent evt) {
+                loadDocument(file);
+            }
+        });
     }
 
     /**
      * Description of the Method
      *
-     * @param file  PARAM
+     * @param uri taken to be a file, if not beginning with http://
      */
-    private void loadDocument( final String file ) {
-        SwingUtilities.invokeLater(
-                    new Runnable() {
-                        public void run() {
-                            try {
-                                long st = System.currentTimeMillis();
+    private void loadDocument(final String uri) {
+        SwingUtilities.invokeLater(new Runnable() {
+            public void run() {
+                try {
+                    long st = System.currentTimeMillis();
 
-                                panel.setDocument( new File(file).toURL() );
+                    URL url = null;
+                    if (uri.startsWith("http://"))
+                        url = new URL(uri);
+                    else
+                        url = new File(uri).toURL();
 
-                                long el = System.currentTimeMillis() - st;
-                                XRLog.general( "loadDocument(" + file + ") in " + el + "ms, render may take longer" );
-                                HTMLTest.this.setTitle( BASE_TITLE + "-  " +
-                                        panel.getDocumentTitle() + "  " +
-                                        "(" + file + ")" );
-                            } catch ( Exception ex ) {
-                                u.p( ex );
-                            }
-                            panel.repaint();
-                        }
-                    } );
+
+                    panel.setDocument(url);
+
+                    long el = System.currentTimeMillis() - st;
+                    XRLog.general("loadDocument(" + url.toString() + ") in " + el + "ms, render may take longer");
+                    HTMLTest.this.setTitle(BASE_TITLE + "-  " +
+                            panel.getDocumentTitle() + "  " +
+                            "(" + url.toString() + ")");
+                } catch (Exception ex) {
+                    u.p(ex);
+                }
+                panel.repaint();
+            }
+        });
     }
 
     /**
      * The main program for the HTMLTest class
      *
-     * @param args           The command line arguments
-     * @exception Exception  Throws
+     * @param args The command line arguments
+     * @throws Exception Throws
      */
-    public static void main( String[] args )
-        throws Exception {
+    public static void main(String[] args)
+            throws Exception {
 
-        final JFrame frame = new HTMLTest( args );
-        frame.setDefaultCloseOperation( JFrame.EXIT_ON_CLOSE );
+        final JFrame frame = new HTMLTest(args);
+        frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
         frame.pack();
         //frame.setSize( text_width, 300 );
         frame.show();
@@ -227,43 +217,47 @@ public class HTMLTest extends JFrame {
     /**
      * Description of the Class
      *
-     * @author   empty
+     * @author empty
      */
     class QuitAction extends AbstractAction {
-        /** Constructor for the QuitAction object */
+        /**
+         * Constructor for the QuitAction object
+         */
         QuitAction() {
-            super( "Quit" );
-            putValue( MNEMONIC_KEY, new Integer( KeyEvent.VK_Q ) );
+            super("Quit");
+            putValue(MNEMONIC_KEY, new Integer(KeyEvent.VK_Q));
         }
 
         /**
          * Description of the Method
          *
-         * @param evt  PARAM
+         * @param evt PARAM
          */
-        public void actionPerformed( ActionEvent evt ) {
-            System.exit( 0 );
+        public void actionPerformed(ActionEvent evt) {
+            System.exit(0);
         }
     }
 
     /**
      * Description of the Class
      *
-     * @author   empty
+     * @author empty
      */
     class BoxOutlinesAction extends AbstractAction {
-        /** Constructor for the BoxOutlinesAction object */
+        /**
+         * Constructor for the BoxOutlinesAction object
+         */
         BoxOutlinesAction() {
-            super( "Show Box Outlines" );
-            putValue( MNEMONIC_KEY, new Integer( KeyEvent.VK_B ) );
+            super("Show Box Outlines");
+            putValue(MNEMONIC_KEY, new Integer(KeyEvent.VK_B));
         }
 
         /**
          * Description of the Method
          *
-         * @param evt  PARAM
+         * @param evt PARAM
          */
-        public void actionPerformed( ActionEvent evt ) {
+        public void actionPerformed(ActionEvent evt) {
             panel.getRenderingContext().getContext().debug_draw_boxes = !panel.getRenderingContext().getContext().debug_draw_boxes;
             panel.repaint();
         }
@@ -272,21 +266,23 @@ public class HTMLTest extends JFrame {
     /**
      * Description of the Class
      *
-     * @author   empty
+     * @author empty
      */
     class LineBoxOutlinesAction extends AbstractAction {
-        /** Constructor for the LineBoxOutlinesAction object */
+        /**
+         * Constructor for the LineBoxOutlinesAction object
+         */
         LineBoxOutlinesAction() {
-            super( "Show Line Box Outlines" );
-            putValue( MNEMONIC_KEY, new Integer( KeyEvent.VK_L ) );
+            super("Show Line Box Outlines");
+            putValue(MNEMONIC_KEY, new Integer(KeyEvent.VK_L));
         }
 
         /**
          * Description of the Method
          *
-         * @param evt  PARAM
+         * @param evt PARAM
          */
-        public void actionPerformed( ActionEvent evt ) {
+        public void actionPerformed(ActionEvent evt) {
             panel.getRenderingContext().getContext().debug_draw_line_boxes = !panel.getRenderingContext().getContext().debug_draw_line_boxes;
             panel.repaint();
         }
@@ -295,52 +291,57 @@ public class HTMLTest extends JFrame {
     /**
      * Description of the Class
      *
-     * @author   empty
+     * @author empty
      */
     class InlineBoxesAction extends AbstractAction {
-        /** Constructor for the InlineBoxesAction object */
+        /**
+         * Constructor for the InlineBoxesAction object
+         */
         InlineBoxesAction() {
-            super( "Show Inline Boxes" );
-            putValue( MNEMONIC_KEY, new Integer( KeyEvent.VK_I ) );
+            super("Show Inline Boxes");
+            putValue(MNEMONIC_KEY, new Integer(KeyEvent.VK_I));
         }
 
         /**
          * Description of the Method
          *
-         * @param evt  PARAM
+         * @param evt PARAM
          */
-        public void actionPerformed( ActionEvent evt ) {
+        public void actionPerformed(ActionEvent evt) {
             panel.getRenderingContext().getContext().debug_draw_inline_boxes = !panel.getRenderingContext().getContext().debug_draw_inline_boxes;
             panel.repaint();
         }
     }
 
     class FontMetricsAction extends AbstractAction {
-        /** Constructor for the InlineBoxesAction object */
+        /**
+         * Constructor for the InlineBoxesAction object
+         */
         FontMetricsAction() {
-            super( "Show Font Metrics" );
-            putValue( MNEMONIC_KEY, new Integer( KeyEvent.VK_F ) );
+            super("Show Font Metrics");
+            putValue(MNEMONIC_KEY, new Integer(KeyEvent.VK_F));
         }
 
         /**
          * Description of the Method
          *
-         * @param evt  PARAM
+         * @param evt PARAM
          */
-        public void actionPerformed( ActionEvent evt ) {
+        public void actionPerformed(ActionEvent evt) {
             panel.getRenderingContext().getContext().debug_draw_font_metrics = !panel.getRenderingContext().getContext().debug_draw_font_metrics;
             panel.repaint();
         }
     }
-    
+
     class AntiAliasedAction extends AbstractAction {
         int hint;
+
         AntiAliasedAction(String text, int hint) {
-            super( text );
+            super(text);
             this.hint = hint;
         }
 
-        public void actionPerformed( ActionEvent evt ) {
+        public void actionPerformed(ActionEvent evt) {
             panel.getRenderingContext().getTextRenderer().setSmoothingLevel(hint);
             panel.repaint();
         }
@@ -349,41 +350,47 @@ public class HTMLTest extends JFrame {
     /**
      * Description of the Class
      *
-     * @author   empty
+     * @author empty
      */
     class ShowDOMInspectorAction extends AbstractAction {
-        /** Description of the Field */
+        /**
+         * Description of the Field
+         */
         private DOMInspector inspector;
-        /** Description of the Field */
+        /**
+         * Description of the Field
+         */
         private JFrame inspectorFrame;
 
-        /** Constructor for the ShowDOMInspectorAction object */
+        /**
+         * Constructor for the ShowDOMInspectorAction object
+         */
         ShowDOMInspectorAction() {
-            super( "DOM Tree Inspector" );
-            putValue( MNEMONIC_KEY, new Integer( KeyEvent.VK_D ) );
+            super("DOM Tree Inspector");
+            putValue(MNEMONIC_KEY, new Integer(KeyEvent.VK_D));
         }
 
         /**
          * Description of the Method
          *
-         * @param evt  PARAM
+         * @param evt PARAM
          */
-        public void actionPerformed( ActionEvent evt ) {
-            if ( inspectorFrame == null ) {
-                inspectorFrame = new JFrame( "DOM Tree Inspector" );
+        public void actionPerformed(ActionEvent evt) {
+            if (inspectorFrame == null) {
+                inspectorFrame = new JFrame("DOM Tree Inspector");
             }
-            if ( inspector == null ) {
+            if (inspector == null) {
                 // inspectorFrame = new JFrame("DOM Tree Inspector");
 
-                inspector = new DOMInspector( panel.doc, panel.getRenderingContext().getContext(), panel.getRenderingContext().getContext().css );
+                inspector = new DOMInspector(panel.doc, panel.getRenderingContext().getContext(), panel.getRenderingContext().getContext().css);
 
-                inspectorFrame.getContentPane().add( inspector );
+                inspectorFrame.getContentPane().add(inspector);
 
                 inspectorFrame.pack();
-                inspectorFrame.setSize( 400, 600 );
+                inspectorFrame.setSize(400, 600);
                 inspectorFrame.show();
             } else {
-                inspector.setForDocument( panel.doc, panel.getRenderingContext().getContext(), panel.getRenderingContext().getContext().css );
+                inspector.setForDocument(panel.doc, panel.getRenderingContext().getContext(), panel.getRenderingContext().getContext().css);
             }
             inspectorFrame.show();
         }
@@ -392,51 +399,55 @@ public class HTMLTest extends JFrame {
     /**
      * Description of the Class
      *
-     * @author   empty
+     * @author empty
      */
     class RefreshPageAction extends AbstractAction {
-        /** Constructor for the RefreshPageAction object */
+        /**
+         * Constructor for the RefreshPageAction object
+         */
         RefreshPageAction() {
-            super( "Refresh Page" );
-            putValue( MNEMONIC_KEY, new Integer( KeyEvent.VK_R ) );
-            putValue( ACCELERATOR_KEY,
-                    KeyStroke.getKeyStroke( "F5" ) );
+            super("Refresh Page");
+            putValue(MNEMONIC_KEY, new Integer(KeyEvent.VK_R));
+            putValue(ACCELERATOR_KEY,
+                    KeyStroke.getKeyStroke("F5"));
         }
 
         /**
          * Description of the Method
          *
-         * @param evt  PARAM
+         * @param evt PARAM
          */
-        public void actionPerformed( ActionEvent evt ) {
+        public void actionPerformed(ActionEvent evt) {
             // TODO
-            System.out.println( "Refresh Page triggered" );
+            System.out.println("Refresh Page triggered");
         }
     }
 
     /**
      * Description of the Class
      *
-     * @author   empty
+     * @author empty
      */
     class ReloadPageAction extends AbstractAction {
-        /** Constructor for the ReloadPageAction object */
+        /**
+         * Constructor for the ReloadPageAction object
+         */
         ReloadPageAction() {
-            super( "Reload Page" );
-            putValue( MNEMONIC_KEY, new Integer( KeyEvent.VK_P ) );
-            putValue( ACCELERATOR_KEY,
-                    KeyStroke.getKeyStroke( KeyEvent.VK_F5,
-                    ActionEvent.CTRL_MASK ) );
+            super("Reload Page");
+            putValue(MNEMONIC_KEY, new Integer(KeyEvent.VK_P));
+            putValue(ACCELERATOR_KEY,
+                    KeyStroke.getKeyStroke(KeyEvent.VK_F5,
+                            ActionEvent.CTRL_MASK));
         }
 
         /**
          * Description of the Method
          *
-         * @param evt  PARAM
+         * @param evt PARAM
          */
-        public void actionPerformed( ActionEvent evt ) {
+        public void actionPerformed(ActionEvent evt) {
             // TODO
-            System.out.println( "Reload Page triggered" );
+            System.out.println("Reload Page triggered");
         }
     }
 }
@@ -452,6 +463,9 @@ public class HTMLTest extends JFrame {
  * $Id$
  *
  * $Log$
+ * Revision 1.20  2004/11/15 23:02:35  tobega
+ * Modified so that a http url may be given on command-line
+ *
  * Revision 1.19  2004/11/15 14:33:10  joshy
  * fixed line breaking bug with certain kinds of unbreakable lines
  *
